config/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-api
  labels:
    app: test-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-api
  template:
    metadata:
      labels:
        app: test-api
    spec:
      containers:
      - name: test-api
        image: ghcr.io/rodbravocea/test_api:main
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
