config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-api
spec:
  selector:
    app: test-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
  
---

apiVersion: v1
kind: Service
metadata:
  name: test-api
  namespace: kube-system
spec:
  type: ExternalName
  externalName: test-api.default.svc.cluster.local
