config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-api
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
    - host: api.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-api
                port:
                  number: 3000
